--- a/source/core/core.scss
+++ b/source/core/core.scss
@@ -1,7 +1,7 @@
 /*
 *   Add styles in folders or just files.
 *   The build will collate all files and combine.
-*   this is the simplist way wo handle this process.
+*   this is the simplist way to handle this process.
 */
 
 body{
